--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
     <link href="//webfontworld.github.io/gonggames/EsaManru.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="//korea-women.netlify.app/custom.css">
-    <script type="text/javascript" src="//korea-women.netlify.app/custom.js"/>
+    <script type="text/javascript" src="//korea-women.netlify.app/custom.js"></script>
 
     <title>Document</title>
 </head>
@@ -26,6 +26,8 @@
         </nav>
         <a class="btn-mobile-menu" href="#"><i class="xi-bars"></i></a>
     </div>
+
+
     <div class="campaign-carousel">
         <ul class="slider">
             <li><a  href="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/1cc677e21aeb8.png" data-lightbox="event-image"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/1cc677e21aeb8.png" alt=""></a></li>
@@ -35,6 +37,89 @@
             <li><a  href="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/1cc677e21aeb8.png" data-lightbox="event-image"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/1cc677e21aeb8.png" alt=""></a></li>
         </ul>
     </div>
+
+    <div class="slider-main">
+        <ul class="slider">
+            <li>
+                <div class="slider-item">
+                    <div class="thumb-area">
+                        <img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ac6a356b03f9.png" alt="">
+                    </div>
+                    <div class="text-area">
+                        <h2>딸들에게<br>희망을 주는 후원1</h2>
+                        <p>한국여성재단은 여성들이 차별받지 않고 마음껏 잠재력을 펼칠 수 있는
+세상을 만들기 위한 다양한 사업을 지원합니다.</p>
+                        <a class="more" href="#">재단소개 더 보기<i class="fa-solid fa-arrow-right-long"></i></a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slider-item">
+                    <div class="thumb-area">
+                        <img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ac6a356b03f9.png" alt="">
+                    </div>
+                    <div class="text-area">
+                        <h2>딸들에게<br>희망을 주는 후원2</h2>
+                        <p>한국여성재단은 여성들이 차별받지 않고 마음껏 잠재력을 펼칠 수 있는
+세상을 만들기 위한 다양한 사업을 지원합니다.</p>
+                        <a class="more" href="#">재단소개 더 보기<i class="fa-solid fa-arrow-right-long"></i></a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slider-item">
+                    <div class="thumb-area">
+                        <img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ac6a356b03f9.png" alt="">
+                    </div>
+                    <div class="text-area">
+                        <h2>딸들에게<br>희망을 주는 후원3</h2>
+                        <p>한국여성재단은 여성들이 차별받지 않고 마음껏 잠재력을 펼칠 수 있는
+세상을 만들기 위한 다양한 사업을 지원합니다.</p>
+                        <a class="more" href="#">재단소개 더 보기<i class="fa-solid fa-arrow-right-long"></i></a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <div class="controls">
+            <a class="prev" href="#" title="이전"><i class="fa-solid fa-chevron-left"></i></a>
+            <div class="indicator"></div>
+            <a class="next" href="#" title="다음"><i class="fa-solid fa-chevron-right"></i></a>
+        </div>
+    </div>
+
+<footer>
+
+    <div class="footer-group">
+        <div class="footer-info">
+            <a class="logo" href="/" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/dd0f86632a0ae.png" class="fr-fil fr-dib"></a>
+            <ul>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">개인정보보호정책</a></li>
+                <li><a href="#">이메일무단수집거부</a></li>
+                <li><a href="#">사이트맵</a></li>
+                <li><a href="#">오시는 길</a></li>
+            </ul>
+        </div>
+        <div class="site-info">
+            <select name="family_site" id="family_site">
+                <option value="www.google.co.kr">사이트1</option>
+            </select>
+            <dl class="text-info">
+                <dt>재단법인 한국여성재단</dt>
+                <dd>
+                    업무시간 : 오전 9:30 ~ 오후 5:30<em>|</em>주소 : (04001) 서울시 마포구 월드컵북로 5길 13(서교동) 한국여성재단빌딩 5층<br>
+                    전화 : 070-5129-5442<em>|</em>이메일 : womenfund@womenfund.or.kr<em>|</em>대표 : 장필화<i>|</i>사업자등록번호 : 220-82-03892<br>
+                    <span>후원계좌 : 예금주 - 재단법인 한국여성재단 (NH농협 1279-01-000251, 국민 079-01-0405-971)</span>
+                </dd>
+            </dl>
+        </div>
+        <div class="link-info">
+            <a class="future-forum" href="#"><span>미래포럼</span><i class="xi-arrow-right"></i></a>
+        </div>
+    </div>
+
+
+</footer>
 
 </body>
 </html>
