--- a/html.html
+++ b/html.html
@@ -87,6 +87,43 @@
         </div>
     </div>
 
+
+
+
+    <div class="scription-main">
+        <h2>딸들에게 희망을</h2>
+        <p>한국여성재단은 딸들이 평등하고 조화롭게 살 수 있는 세상을 꿈꾸며 1999년 12월, 첫 발을 내디뎠습니다. <br>
+            우리나라 최초의 여성을 위한 민간공익재단으로서 '딸들에게 희망을' 만들기 위해 노력해왔습니다. <br>
+            성평등 사회를 위한 공익활동을 지원하고, 사회경제적으로 불리한 위치에서 힘겹게 살아가는 여성들에게 꿈과 희망을  <br>
+            지원했습니다. 앞으로도 연령, 세대, 지역을 넘나드는 여성들의 연대 그 가운데에 <br>
+            한국여성재단이 함께 하겠습니다. </p>
+        <a class="more" href="#">한국여성재단에 기부하기<i class="fa-solid fa-arrow-right-long"></i></a>
+    </div>
+
+
+    <div class="donate-kind">
+        <dl>
+            <dt>성평등 기금</dt>
+            <dd>이미지</dd>
+        </dl>
+        <dl>
+            <dt>W 기금</dt>
+            <dd>이미지</dd>
+        </dl>
+        <dl>
+            <dt>특정명의 기금</dt>
+            <dd>이미지</dd>
+        </dl>
+        <dl>
+            <dt>개인 기부</dt>
+            <dd>이미지</dd>
+        </dl>
+        <dl>
+            <dt>기업 기부</dt>
+            <dd>이미지</dd>
+        </dl>
+    </div>
+
 <footer>
 
     <div class="footer-group">
