--- a/html.html
+++ b/html.html
@@ -87,6 +87,54 @@
         </div>
     </div>
 
+    <div class="slider-logo">
+
+        <div class="slider">
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/0c4cccea4e138.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/3328429b0875b.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/ec34e4aa5bc07.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/e3cee5d5a2c3c.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/4f683e512da18.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/98e29e837b380.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/316c582194639.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/0c4cccea4e138.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/3328429b0875b.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/ec34e4aa5bc07.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/e3cee5d5a2c3c.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/4f683e512da18.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/98e29e837b380.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+            <div>
+                <a href="#" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/316c582194639.png" alt="회사명" class="fr-fic fr-dii"></a>
+            </div>
+        </div>
+    </div>
+
 
 
 
