--- a/html/01-기부-기부안내.html
+++ b/html/01-기부-기부안내.html
@@ -12,108 +12,246 @@
 
 </head>
 <body>
+<div class="container">
 
-  <div class="container">
+  <div class="pt-16 pb-24">
+    <ul class="breadcrumb-menu flex mb-4 text-base text-gray-600">
+      <li class="home"><a class="text-primary font-bold" href="#">HOME</a></li>
+      <li><a href="#">기부</a></li>
+    </ul>
+    <h1 class="font-bold text-[40px]">기부 안내</h1>
+  </div>
 
-    <div class="pt-16 pb-24">
-      <ul class="breadcrumb-menu flex mb-4 text-base text-gray-600">
-          <li class="home"><a class="text-primary font-bold" href="#">HOME</a></li>
-          <li><a href="#">기부</a></li>
-      </ul>
-      <h1 class="font-bold text-[40px]">기부 안내</h1>
+
+  <h2 class="mb-7 text-2xl font-bold">어떤 분야에 기부할 수 있나요?</h2>
+
+  <ul class="donate-info -mx-4 flex flex-wrap mb-24">
+    <li class="px-4 w-1/2">
+      <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
+        <div class="w-[88px] mr-6"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/1c79d1b700bae.png"
+            class="fr-fin fr-dib"></div>
+        <div>
+
+          <dl class="mb-2">
+            <dt class="text-lg text-gray-900 font-bold mb-2">성평등 기금</dt>
+            <dd class="text-base text-gray600">성차별 문화와 제도를 개선하고 성평등한 사회를 만드는 전국 여성단체 사업을 지원</dd>
+          </dl>
+          <div class="overflow-hidden"><a
+              class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black"
+              href="#">자세히보기</a> <a
+              class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black"
+              href="#">바로기부하기</a></div>
+        </div>
+      </div>
+    </li>
+    <li class="px-4 w-1/2">
+      <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
+        <div class="w-[88px] mr-6"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/58244d909a2fb.png"
+            class="fr-fin fr-dib"></div>
+        <div>
+
+          <dl class="mb-2">
+            <dt class="text-lg text-gray-900 font-bold mb-2">W기금</dt>
+            <dd class="text-base text-gray600">모든 여성들이 차별받지 않고 마음껏 잠재력을 펼칠 수 있는 세상을 만들기 위해 사용</dd>
+          </dl>
+          <div class="overflow-hidden"><a
+              class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black"
+              href="#">자세히보기</a> <a
+              class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black"
+              href="#">바로기부하기</a> <a
+              class="float-left bg-[#04A000] text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white"
+              href="#">해피빈</a> <a
+              class="float-left bg-[#204CA1] text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white"
+              href="#">문자</a></div>
+        </div>
+      </div>
+    </li>
+    <li class="px-4 w-1/2">
+      <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
+        <div class="w-[88px] mr-6"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/7f587fe7cb2fe.png"
+            class="fr-fin fr-dib"></div>
+        <div>
+
+          <dl class="mb-2">
+            <dt class="text-lg text-gray-900 font-bold mb-2">고액기부</dt>
+            <dd class="text-base text-gray600">딸들에게 희망을 이어가갈 선한 영향력을 전하는 개인 고액 기부자 클럽</dd>
+          </dl>
+          <div class="overflow-hidden"><a
+              class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black"
+              href="#">자세히보기&nbsp;</a> <a
+              class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black"
+              href="#">바로기부하기&nbsp;</a></div>
+        </div>
+      </div>
+    </li>
+    <li class="px-4 w-1/2">
+      <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
+        <div class="w-[88px] mr-6"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/404498702c996.png"
+            class="fr-fin fr-dib"></div>
+        <div>
+
+          <dl class="mb-2">
+            <dt class="text-lg text-gray-900 font-bold mb-2">특별기념일 기부</dt>
+            <dd class="text-base text-gray600">아이 기념일, 생일, 결혼, 추모, 평등 가족 등 특별한 날, 특별한 기부</dd>
+          </dl>
+          <div class="overflow-hidden"><a
+              class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black"
+              href="#">자세히보기&nbsp;</a> <a
+              class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black"
+              href="#">바로기부하기&nbsp;</a></div>
+        </div>
+      </div>
+    </li>
+    <li class="px-4 w-1/2">
+      <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
+        <div class="w-[88px] mr-6"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/5084fd7a3b8e2.png"
+            class="fr-fin fr-dib"></div>
+        <div>
+
+          <dl class="mb-2">
+            <dt class="text-lg text-gray-900 font-bold mb-2">주제별 사업기부</dt>
+            <dd class="text-base text-gray600">여성 안전, 및 폭력 예방, 취약 여성 건강권 확보, 빈곤국아 아동&middot;청소년 교육 지원</dd>
+          </dl>
+          <div class="overflow-hidden"><a
+              class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black"
+              href="#">자세히보기&nbsp;</a> <a
+              class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black"
+              href="#">바로기부하기&nbsp;</a></div>
+        </div>
+      </div>
+    </li>
+    <li class="px-4 w-1/2">
+      <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
+        <div class="w-[88px] mr-6"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/1c668a8b432cf.png"
+            class="fr-fin fr-dib"></div>
+        <div>
+
+          <dl class="mb-2">
+            <dt class="text-lg text-gray-900 font-bold mb-2">기업기부</dt>
+            <dd class="text-base text-gray600">기업 사회공헌, 임직원 나눔, 현물 기부
+              <br>&nbsp;
+            </dd>
+          </dl>
+          <div class="overflow-hidden"><a
+              class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black"
+              href="#">자세히보기&nbsp;</a> <a
+              class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black"
+              href="#">바로기부하기&nbsp;</a></div>
+        </div>
+      </div>
+    </li>
+  </ul>
+
+  <h2 class="mb-7 text-2xl font-bold">어떤 분야에 기부할 수 있나요?</h2>
+
+  <div class="donate-process flex justify-between items-center mb-24">
+    <dl class="w-[16.1%] h-[156px] border border-gray400 rounded-lg p-6">
+      <dt class="text-lg font-bold text-primary mb-2">기부 내용 결정</dt>
+      <dd class="text-gray600">기부 분야와 기부금액 선택</dd>
+    </dl>
+    <div class="d"><i>></i></div>
+    <dl class="w-[16.1%] h-[156px] border border-gray400 rounded-lg p-6">
+      <dt class="text-lg font-bold text-primary mb-2">기부자 정보 제공</dt>
+      <dd class="text-gray600">후원자 정보 작성</dd>
+    </dl>
+    <div class="d"><i>></i></div>
+    <dl class="w-[16.1%] h-[156px] border border-gray400 rounded-lg p-6">
+      <dt class="text-lg font-bold text-primary mb-2">결제방법 선택</dt>
+      <dd class="text-gray600">원하는 방법으로 온라인 결제(또는 계좌입금) 진행</dd>
+    </dl>
+    <div class="d"><i>></i></div>
+    <dl class="w-[16.1%] h-[156px] border border-gray400 rounded-lg p-6">
+      <dt class="text-lg font-bold text-primary mb-2">기부신청 완료</dt>
+      <dd class="text-gray600">나의기부내역에서
+        확인</dd>
+    </dl>
+    <div class="d"><i>></i></div>
+    <dl class="w-[16.1%] h-[156px] border border-gray400 rounded-lg p-6">
+      <dt class="text-lg font-bold text-primary mb-2">기부금영수증 발행</dt>
+      <dd class="text-gray600">연말간소화서비스에
+        서 확인</dd>
+    </dl>
+  </div>
+
+  <div class="flex items-center justify-between mb-24">
+    <dl class="mr-8">
+      <dt class="mb-7 text-2xl font-bold">정기 기부자에게 드리는 한국여성재단의 마음</dt>
+      <dd>
+        <ul class="list-disc text-lg text-gray700 pl-6">
+          <li>월 1만원 이상 정기기부를 약정해 주신 기부자님께 첫 출금일 후, <br>
+            후원증서와 W배지를 보내드립니다.</li>
+          <li>>정기적으로 한국여성재단의 소식을 전합니다<br>
+            (뉴스레터, 소식지, 행사 초대 등)</li>
+        </ul>
+      </dd>
+    </dl>
+    <div class="w-[400px]">
+      <img class="w-full" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/9f8eb9dc95a0f.png" alt="">
+    </div>
+  </div>
+
+
+  <div class="max-w-[968px] mx-auto">
+
+    <h2 class="mb-7 text-2xl font-bold">기부 FAQ</h2>
+
+    <div class="accordion01">
+
+      <dl class="active">
+        <dt><a href="#"><span><b>[기부관련]</b>기부의 종류와 방법에는 어떤 것이 있나요?</span></a></dt>
+        <dd class="leading-[1.8]">
+          <p>기부는 현금 기부와 현물 기부(물품 등)로 구분됩니다.</p>
+          <br>
+          <ul class="list-disc text-sm text-gray600 leading-[1.8] pl-4">
+            <li><b>현금 기부</b> - 정기/일시<br>
+              - 정기기부 : 매월 일정한 금액을 정기적으로 CMS 자동이체, 신용카드로 납부하는 방법입니다.<br>
+              - 일시기부 : 기부하고자 하는 금액을 일회성으로 계좌이체, 카드결제, 무통장입금 등으로 납부하는 방법입니다.<br>
+              ※ 후원계좌(예금주 : 한국여성재단, 농협 : 369-17-005283, 국민 : 079-01-0405-971)<br></li>
+              <li><b>현물 기부</b> - 현금이 아닌 물품 기부 한국여성재단은 일회성 물품 기부를 받고 있지 않습니다. 기업 제휴의 경우 나눔기획팀(02-336-6463)으로 연락주시기 바랍니다.</li>
+            </li>
+          </ul>
+
+        </dd>
+      </dl>
+      <dl>
+        <dt><a href="#"><span><b>[기부관련]</b>기부 신청은 어떻게 하나요?</span></a></dt>
+        <dd class="leading-[1.8]">
+          <p>출금되지 않은 기부금은 당월 출금일로부터 10일 이후에 재 출금됩니다.</p>
+          <br>
+          <table>
+            <thead>
+              <th>정기출금일</th>
+              <th>재출금일</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>5일</td>
+                <td>당월 15일</td>
+              </tr>
+              <tr>
+                <td>15일</td>
+                <td>당월 15일</td>
+              </tr>
+              <tr>
+                <td>25일</td>
+                <td>다음 달 5일</td>
+              </tr>
+            </tbody>
+          </table>
+          <br>
+          <p>※ 결제 정보 오류로 미납된 기부금 납부를 원하시면 연락주시기 바랍니다(나눔기획팀, 02-336-6463).</p>
+        </dd>
+      </dl>
     </div>
 
-
-    <h2 class="mb-7 text-2xl font-bold">어떤 분야에 기부할 수 있나요?</h2>
-
-    <ul class="-mx-4 flex flex-wrap">
-      <li class="px-4 w-1/2">
-        <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
-          <div class="w-[88px] mr-6">
-            <br>
-          </div>
-          <div>
-
-            <dl class="mb-2">
-              <dt class="text-lg text-gray-900 font-bold mb-2">성평등 기금</dt>
-              <dd class="text-base text-gray600">성차별 문화와 제도를 개선하고 성평등한 사회를 만드는 전국 여성단체 사업을 지원</dd>
-            </dl>
-            <div class="overflow-hidden"><a class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">자세히보기</a> <a class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">바로기부하기</a></div></div></div>
-      </li>
-      <li class="px-4 w-1/2">
-        <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
-          <div class="w-[88px] mr-6">
-            <br>
-          </div>
-          <div>
-
-            <dl class="mb-2">
-              <dt class="text-lg text-gray-900 font-bold mb-2">W기금</dt>
-              <dd class="text-base text-gray600">모든 여성들이 차별받지 않고 마음껏 잠재력을 펼칠 수 있는 세상을 만들기 위해 사용</dd>
-            </dl>
-            <div class="overflow-hidden"><a class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">자세히보기</a> <a class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">바로기부하기</a> <a class="float-left bg-[#04A000] text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">해피빈</a> <a class="float-left bg-[#204CA1] text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">문자</a></div></div></div>
-      </li>
-      <li class="px-4 w-1/2">
-        <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
-          <div class="w-[88px] mr-6">
-            <br>
-          </div>
-          <div>
-
-            <dl class="mb-2">
-              <dt class="text-lg text-gray-900 font-bold mb-2">고액기부</dt>
-              <dd class="text-base text-gray600">딸들에게 희망을 이어가갈 선한 영향력을 전하는 개인 고액 기부자 클럽</dd>
-            </dl>
-            <div class="overflow-hidden"><a class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">자세히보기&nbsp;</a> <a class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">바로기부하기&nbsp;</a></div></div></div>
-      </li>
-      <li class="px-4 w-1/2">
-        <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
-          <div class="w-[88px] mr-6">
-            <br>
-          </div>
-          <div>
-
-            <dl class="mb-2">
-              <dt class="text-lg text-gray-900 font-bold mb-2">특별기념일 기부</dt>
-              <dd class="text-base text-gray600">아이 기념일, 생일, 결혼, 추모, 평등 가족 등 특별한 날, 특별한 기부</dd>
-            </dl>
-            <div class="overflow-hidden"><a class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">자세히보기&nbsp;</a> <a class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">바로기부하기&nbsp;</a></div></div></div>
-      </li>
-      <li class="px-4 w-1/2">
-        <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
-          <div class="w-[88px] mr-6">
-            <br>
-          </div>
-          <div>
-
-            <dl class="mb-2">
-              <dt class="text-lg text-gray-900 font-bold mb-2">주제별 사업기부</dt>
-              <dd class="text-base text-gray600">여성 안전, 및 폭력 예방, 취약 여성 건강권 확보, 빈곤국아 아동&middot;청소년 교육 지원</dd>
-            </dl>
-            <div class="overflow-hidden"><a class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">자세히보기&nbsp;</a> <a class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">바로기부하기&nbsp;</a></div></div></div>
-      </li>
-      <li class="px-4 w-1/2">
-        <div class="rounded-lg border border-gray-200 py-6 px-8 mb-6 flex">
-          <div class="w-[88px] mr-6">
-            <br>
-          </div>
-          <div>
-
-            <dl class="mb-2">
-              <dt class="text-lg text-gray-900 font-bold mb-2">기업기부</dt>
-              <dd class="text-base text-gray600">기업 사회공헌, 임직원 나눔, 현물 기부
-                <br>&nbsp;</dd>
-            </dl>
-            <div class="overflow-hidden"><a class="float-left bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">자세히보기&nbsp;</a> <a class="float-left bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2" href="#">바로기부하기&nbsp;</a></div></div></div>
-      </li>
-    </ul>
-
-
   </div>
+
+</div>
 
 
 <script src="//code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="//cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="../js/custom.js"></script>
 <script src="../js/tailwind.config.js"></script>
 </body>
