--- a/html/01-기부-기부안내.html
+++ b/html/01-기부-기부안내.html
@@ -14,12 +14,12 @@
 <body>
 <div class="container">
 
-  <div class="pt-16 pb-24">
-    <ul class="breadcrumb-menu flex mb-4 text-base text-gray-600">
+  <div class="pt-8 pb-12 lg:pt-16 lg:pb-24 text-center lg:text-left">
+    <ul class="breadcrumb-menu lg:!flex lg:!opacity-100 hidden mb-4 text-base text-gray-600">
       <li class="home"><a class="text-primary font-bold" href="#">HOME</a></li>
       <li><a href="#">기부</a></li>
     </ul>
-    <h1 class="font-bold text-[40px]">기부 안내</h1>
+    <h1 class="!font-bold lg:!text-[40px] !text-[32px]">기부 안내</h1>
   </div>
 
 
