--- a/html/04-소개-미션과비전.html
+++ b/html/04-소개-미션과비전.html
@@ -150,7 +150,7 @@
         <dt class="lg:w-1/5 lg:text-lg text-base mb-4 lg:mb-0">
           <b class="mb-2 block">한국여성재단<br class="lg:block hidden">
             윤리헌장</b>
-            <span class="text-sm text-gray500">2014.12.31 제정</span>
+            <span class="text-sm text-gray500 font-normal">2014.12.31 제정</span>
         </dt>
         <dd class="flex-grow">
           <div class="text-primary text-lg lg:text-2xl font-bold mb-5">한국여성재단 임직원은</div>
