--- a/html/02-사업.html
+++ b/html/02-사업.html
@@ -25,11 +25,11 @@
   <div>
     <dl class="mb-8 lg:mb-12">
       <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
-      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
         2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
     </dl>
 
-    <table class="table-business01">
+    <table class="table-business01 mb-16">
       <tbody>
         <tr>
           <th class="w-[30%]"><span class="flex items-center"><img class="w-5 inline mr-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/36c569f36adb8.png" alt="">지원 금액</span></th>
