--- a/html/02-사업.html
+++ b/html/02-사업.html
@@ -29,7 +29,7 @@
         2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
     </dl>
 
-    <table class="table-business01 mb-16">
+    <table class="table-business01 mb-12 lg:mb-16">
       <tbody>
         <tr>
           <th class="w-[30%]"><span class="flex items-center"><img class="w-5 inline mr-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/36c569f36adb8.png" alt="">지원 금액</span></th>
@@ -122,7 +122,7 @@
   </dl>
 
 
-  <dl class="mb-14">
+  <dl class="mb-24">
     <dt class="text-2xl text-black111 font-bold mb-5">여성신문 Go! 261 Fund 지원</dt>
     <dd>
       <table class="table-business02">
