--- a/html/04-사업-교육장대여.html
+++ b/html/04-사업-교육장대여.html
@@ -22,8 +22,8 @@
     <h1 class="!font-bold lg:!text-[40px] !text-[32px]">교육장 대여</h1>
   </div>
 
-  <div>
-    <p class="text-gray600 text-base mb-10">한국여성재단은 워크숍, 교육, 토론회 등 회원들과 소통하고자 하는 NOG단체에 교육장을 개방하고 있습니다.</p>
+  <div class="text-table">
+    <p class="text-gray600 text-sm lg:text-base !mb-10">한국여성재단은 워크숍, 교육, 토론회 등 회원들과 소통하고자 하는 NOG단체에 교육장을 개방하고 있습니다.</p>
 
     <table class="table-education01">
       <tbody>
