--- a/html/01-기부-기부안내.html
+++ b/html/01-기부-기부안내.html
@@ -16,11 +16,23 @@
 
   <div class="pt-8 pb-12 lg:pt-16 lg:pb-24 text-center lg:text-left">
     <ul class="breadcrumb-menu lg:!flex lg:!opacity-100 hidden mb-4 text-base text-gray-600">
-      <li class="home"><a class="text-primary font-bold" href="#">HOME</a></li>
-      <li><a href="#">기부</a></li>
+      <li class="home"><a class="text-primary font-bold" href="/">HOME</a></li>
+      <li><a href="/24">기부</a></li>
     </ul>
     <h1 class="!font-bold lg:!text-[40px] !text-[32px]">기부 안내</h1>
   </div>
+
+  <div class="pt-8 pb-12 lg:pt-16 lg:pb-24 text-center lg:text-left">
+    <ul class="breadcrumb-menu lg:!flex lg:!opacity-100 hidden mb-4 text-base text-gray-600">
+      <li class="home"><a class="text-primary font-bold" href="/">HOME</a></li>
+      <li><a href="/24">기부</a></li>
+    </ul>
+    <h1 class="!font-bold lg:!text-[40px] !text-[32px] mb-12 lg:mb-4">성평등 기금</h1>
+    <p class="text-sm lg:text-base text-gray600 text-left">성평등 기금은 여성에 대한 차별과 혐오·폭력이 없는 성평등 사회를 조성하고, 여성을 비롯한<br class="hidden lg:!block">
+      사회적 모든 약자들이 자립하여 민주적 세계 시민으로 살아갈 수 있도록 평화와 상생의 미래를 만들기 위한 한국여성재단 대표 기금입니다.<br>
+      성평등기금은 연중 모금하고 있으며, 매년 6월 집중모금 캠페인을 실시합니다.</p>
+  </div>
+
 
   <h2 class="mb-6 lg:!mb-7 text-lg lg:!text-2xl !font-bold">어떤 분야에 기부할 수 있나요?</h2>
 
