--- a/html/02-사업.html
+++ b/html/02-사업.html
@@ -22,7 +22,7 @@
     <h1 class="!font-bold lg:!text-[40px] !text-[32px]">성평등문화확산</h1>
   </div>
 
-  <div>
+  <div class="text-table">
     <dl class="mb-8 lg:mb-12">
       <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
       <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
@@ -51,99 +51,101 @@
     </table>
   </div>
 
-  <dl class="mb-14">
-    <dt class="text-2xl text-black111 font-bold mb-5">성평등사회조성을 위한 자유주제 지원</dt>
-    <dd>
-      <table class="table-business02">
-        <thead>
-          <th class="w-[25%]">단체명</th>
-          <th>사업명</th>
-        </thead>
-        <tbody>
-          <tr>
-            <th>성매매문제 해결을 위한 전국연대</th>
-            <td>2000~2002 나비자리, 군산 성매매업소 화재참사 기록사업</td>
-          </tr>
-          <tr>
-            <th>여성인권상담소 소냐의 집</th>
-            <td>천호동의 여성인권역사 기록화사업 "기록, 시간을 기억하다"</td>
-          </tr>
-          <tr>
-            <th>생애문화연구소 옥희살롱</th>
-            <td>재난과 성별화된 돌봄위기를 통과하며 : 노인요양시설 안팎의 돌봄 경험들을 여성주의적으로 기록하고 해석하기</td>
-          </tr>
-          <tr>
-            <th>평화를 만드는 여성회</th>
-            <td>Women's Korea Peace Appeal- '여성들이 만들어가는 한반도 종전 평화 캠페인'을 위한 여성/지역/청년단체 역량강화와 여성, 청년 이니셔티브를 통한 캠페인 확산 사업</td>
-          </tr>
-          <tr>
-            <th>씽투창작소</th>
-            <td>똑똑! 책으로 여는 성평등 세상</td>
-          </tr>
-          <tr>
-            <th>대구여성영화제</th>
-            <td>cc20가지 색깔 10가지 이야기_대구경북 여성영화 열전 & 아카이브ccc</td>
-          </tr>
-          <tr>
-            <th>한국여성민우회</th>
-            <td>AI는 성차별이 뭔지 알까?</td>
-          </tr>
-          <tr>
-            <th>한국이주여성인권센터</th>
-            <td>재난피해 이주여성을 위한 평등 안전망 만들기</td>
-          </tr>
-        </tbody>
-      </table>
+  <div class="text-table">
+    <dl class="mb-14">
+      <dt class="text-2xl text-black111 font-bold mb-5">성평등사회조성을 위한 자유주제 지원</dt>
+      <dd>
+        <table class="table-business02">
+          <thead>
+            <th class="w-[25%]">단체명</th>
+            <th>사업명</th>
+          </thead>
+          <tbody>
+            <tr>
+              <th>성매매문제 해결을 위한 전국연대</th>
+              <td>2000~2002 나비자리, 군산 성매매업소 화재참사 기록사업</td>
+            </tr>
+            <tr>
+              <th>여성인권상담소 소냐의 집</th>
+              <td>천호동의 여성인권역사 기록화사업 "기록, 시간을 기억하다"</td>
+            </tr>
+            <tr>
+              <th>생애문화연구소 옥희살롱</th>
+              <td>재난과 성별화된 돌봄위기를 통과하며 : 노인요양시설 안팎의 돌봄 경험들을 여성주의적으로 기록하고 해석하기</td>
+            </tr>
+            <tr>
+              <th>평화를 만드는 여성회</th>
+              <td>Women's Korea Peace Appeal- '여성들이 만들어가는 한반도 종전 평화 캠페인'을 위한 여성/지역/청년단체 역량강화와 여성, 청년 이니셔티브를 통한 캠페인 확산 사업</td>
+            </tr>
+            <tr>
+              <th>씽투창작소</th>
+              <td>똑똑! 책으로 여는 성평등 세상</td>
+            </tr>
+            <tr>
+              <th>대구여성영화제</th>
+              <td>cc20가지 색깔 10가지 이야기_대구경북 여성영화 열전 & 아카이브ccc</td>
+            </tr>
+            <tr>
+              <th>한국여성민우회</th>
+              <td>AI는 성차별이 뭔지 알까?</td>
+            </tr>
+            <tr>
+              <th>한국이주여성인권센터</th>
+              <td>재난피해 이주여성을 위한 평등 안전망 만들기</td>
+            </tr>
+          </tbody>
+        </table>
 
-    </dd>
-  </dl>
+      </dd>
+    </dl>
 
-  <dl class="mb-14">
-    <dt class="text-2xl text-black111 font-bold mb-5">여성이 안전한 세상 만들기</dt>
-    <dd>
-      <table class="table-business02">
-        <thead>
-          <th class="w-[25%]">단체명</th>
-          <th>사업명</th>
-        </thead>
-        <tbody>
-          <tr>
-            <th>젠더정치연구소 여.세.연</th>
-            <td>백래시를 타고 넘는 여성들</td>
-          </tr>
-          <tr>
-            <th>한국여성정치연구소</th>
-            <td>2030여성 지방정치학교</td>
-          </tr>
-        </tbody>
-      </table>
+    <dl class="mb-14">
+      <dt class="text-2xl text-black111 font-bold mb-5">여성이 안전한 세상 만들기</dt>
+      <dd>
+        <table class="table-business02">
+          <thead>
+            <th class="w-[25%]">단체명</th>
+            <th>사업명</th>
+          </thead>
+          <tbody>
+            <tr>
+              <th>젠더정치연구소 여.세.연</th>
+              <td>백래시를 타고 넘는 여성들</td>
+            </tr>
+            <tr>
+              <th>한국여성정치연구소</th>
+              <td>2030여성 지방정치학교</td>
+            </tr>
+          </tbody>
+        </table>
 
-    </dd>
-  </dl>
+      </dd>
+    </dl>
 
 
-  <dl class="mb-24">
-    <dt class="text-2xl text-black111 font-bold mb-5">여성신문 Go! 261 Fund 지원</dt>
-    <dd>
-      <table class="table-business02">
-        <thead>
-          <th class="w-[25%]">단체명</th>
-          <th>사업명</th>
-        </thead>
-        <tbody>
-          <tr>
-            <th>한국성폭력상담소</th>
-            <td>여성신문 Go! 261 Fund 성폭력피해생존자 run on 지원사업</td>
-          </tr>
-          <tr>
-            <th>한국여성의전화</th>
-            <td>가정폭력 피해생존자 자립을 위한 ‘내 안의 힘으로, 점프!’</td>
-          </tr>
-        </tbody>
-      </table>
+    <dl class="mb-24">
+      <dt class="text-2xl text-black111 font-bold mb-5">여성신문 Go! 261 Fund 지원</dt>
+      <dd>
+        <table class="table-business02">
+          <thead>
+            <th class="w-[25%]">단체명</th>
+            <th>사업명</th>
+          </thead>
+          <tbody>
+            <tr>
+              <th>한국성폭력상담소</th>
+              <td>여성신문 Go! 261 Fund 성폭력피해생존자 run on 지원사업</td>
+            </tr>
+            <tr>
+              <th>한국여성의전화</th>
+              <td>가정폭력 피해생존자 자립을 위한 ‘내 안의 힘으로, 점프!’</td>
+            </tr>
+          </tbody>
+        </table>
 
-    </dd>
-  </dl>
+      </dd>
+    </dl>
+  </div>
 
 </div>
 
