--- a/html/01-기부-기부안내.html
+++ b/html/01-기부-기부안내.html
@@ -22,7 +22,7 @@
     <h1 class="!font-bold lg:!text-[40px] !text-[32px]">기부 안내</h1>
   </div>
 
-  <div class="pt-8 pb-12 lg:pt-16 lg:pb-24 text-center lg:text-left">
+  <div class="pt-8 pb-6 lg:pt-16 lg:pb-8 text-center lg:text-left">
     <ul class="breadcrumb-menu lg:!flex lg:!opacity-100 hidden mb-4 text-base text-gray-600">
       <li class="home"><a class="text-primary font-bold" href="/">HOME</a></li>
       <li><a href="/24">기부</a></li>
@@ -276,6 +276,11 @@
         </dd>
       </dl>
     </div>
+  </div>
+
+  <div class="-mx-4 lg:mx-0">
+    <img class="hidden lg:!block lg:!opacity-100" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/c1ce9c71bdcbc.png" alt="">
+    <img class="lg:!hidden block opacity-100" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f3b65d500ae22.png" alt="">
   </div>
 
 
