--- a/html/01-기부-종합.html
+++ b/html/01-기부-종합.html
@@ -103,10 +103,120 @@
     </dl>
 
 
+    <ul class="flex lg:-mx-4 -mx-2 flex-wrap">
+      <li class="px-2 w-1/2 lg:px-4 lg:w-1/4 mb-4 lg:mb-8">
+        <div class="rounded-2xl overflow-hidden bg-[#FBF4F7] h-full">
+          <img class="!p-0 w-full" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d624073430a82.png" alt="">
+          <dl class="px-4 py-3 lg:py-4">
+            <dt class="text-sm lg:text-base mb-1 lg:mb-2 font-bold text-black">아이 기념일</dt>
+            <dd class="text-gray600 text-[13px] lg:text-sm">탄생, 백일, 첫돌</dd>
+          </dl>
+        </div>
+      </li>
+      <li class="px-2 w-1/2 lg:px-4 lg:w-1/4 mb-4 lg:mb-8">
+        <div class="rounded-2xl overflow-hidden bg-[#FBF4F7] h-full">
+          <img class="!p-0 w-full" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/01e6a0b777e24.png" alt="">
+          <dl class="px-4 py-3 lg:py-4">
+            <dt class="text-sm lg:text-base mb-1 lg:mb-2 font-bold text-black">생일</dt>
+            <dd class="text-gray600 text-[13px] lg:text-sm"></dd>
+          </dl>
+        </div>
+      </li>
+      <li class="px-2 w-1/2 lg:px-4 lg:w-1/4 mb-4 lg:mb-8">
+        <div class="rounded-2xl overflow-hidden bg-[#FBF4F7] h-full">
+          <img class="!p-0 w-full" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/4125b59066190.png" alt="">
+          <dl class="px-4 py-3 lg:py-4">
+            <dt class="text-sm lg:text-base mb-1 lg:mb-2 font-bold text-black">결혼</dt>
+            <dd class="text-gray600 text-[13px] lg:text-sm"></dd>
+          </dl>
+        </div>
+      </li>
+      <li class="px-2 w-1/2 lg:px-4 lg:w-1/4 mb-4 lg:mb-8">
+        <div class="rounded-2xl overflow-hidden bg-[#FBF4F7] h-full">
+          <img class="!p-0 w-full" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/91d9b68db5116.png" alt="">
+          <dl class="px-4 py-3 lg:py-4">
+            <dt class="text-sm lg:text-base mb-1 lg:mb-2 font-bold text-black">추모</dt>
+            <dd class="text-gray600 text-[13px] lg:text-sm"></dd>
+          </dl>
+        </div>
+      </li>
+      <li class="px-2 w-1/2 lg:px-4 lg:w-1/4 mb-4 lg:mb-8">
+        <div class="rounded-2xl overflow-hidden bg-[#FBF4F7] h-full">
+          <img class="!p-0 w-full" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/efdaaad221fa9.png" alt="">
+          <dl class="px-4 py-3 lg:py-4">
+            <dt class="text-sm lg:text-base mb-1 lg:mb-2 font-bold text-black">평등가족</dt>
+            <dd class="text-gray600 text-[13px] lg:text-sm">가족의 평등선언</dd>
+          </dl>
+        </div>
+      </li>
+      <li class="px-2 w-1/2 lg:px-4 lg:w-1/4 mb-4 lg:mb-8">
+        <div class="rounded-2xl overflow-hidden bg-[#FBF4F7] h-full">
+          <img class="!p-0 w-full" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d60c84990d6c4.png" alt="">
+          <dl class="px-4 py-3 lg:py-4">
+            <dt class="text-sm lg:text-base mb-1 lg:mb-2 font-bold text-black">나만의 기념일</dt>
+            <dd class="text-gray600 text-[13px] lg:text-sm">나만의 스타 데뷔 기념, 취업 성공, 내집 마련 등</dd>
+          </dl>
+        </div>
+      </li>
+    </ul>
+
+
+    <table class="table-business02">
+      <tbody>
+        <tr>
+          <th>기본 예우</th>
+          <td>소식지, 웹 뉴스레터(1만원 이상 기부자에게 누구나)</td>
+        </tr>
+        <tr>
+          <th>리워드 대상</th>
+          <td>일시기부 10만원 이상, 정기기부 1만원 이상(최소 1년 약정)</td>
+        </tr>
+        <tr>
+          <th>리워드 유형</th>
+          <td>우편/웹용 나눔증서(공통)</td>
+        </tr>
+        <tr>
+          <th>기념일별 토퍼 제공</th>
+          <td>※ 평등가족 기부자에 한해 평등선언문 파일 제공</td>
+        </tr>
+      </tbody>
+    </table>
+
+
+    <div class="donate-process lg:flex justify-between">
+
+      <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
+        <dt class="text-base lg:text-lg font-bold text-primary lg:mb-4 mb-0">기부 내용 결정</dt>
+        <dd>
+          <a class="arrow bg-primary text-white text-xs py-1.5 px-4 block w-full rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">지금 기부하기</a>
+        </dd>
+      </dl>
+      <div class="d flex items-center"><em>&gt;</em></div>
+
+      <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
+        <dt class="text-base lg:text-lg font-bold text-primary lg:mb-2 mb-0">기부 내용 결정</dt>
+        <dd class="text-gray600 lg:text-sm text-sm">기부 문의<br>
+          (070-5129-5447)</dd>
+      </dl>
+      <div class="d flex items-center"><em>&gt;</em></div>
+
+      <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
+        <dt class="text-base lg:text-lg font-bold text-primary lg:mb-2 mb-0">기부 진행</dt>
+        <dd class="text-gray600 lg:text-sm text-sm">사진은 SNS 카드뉴스, 나눔증서, 홈페이지 기부 갤러리에 사용됩니다</dd>
+      </dl>
+      <div class="d flex items-center"><em>&gt;</em></div>
+
+      <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
+        <dt class="text-base lg:text-lg font-bold text-primary lg:mb-2 mb-0">나눔증서 제작 및 리워드 발송</dt>
+      </dl>
+
+    </div>
+
+
   </div>
 
 
-  <div class="max-w-[868px] lg:mx-auto mx-7">
+  <div class="max-w-[868px] lg:mx-auto mx-7 ">
     <ul class="lg:flex flex-wrap lg:-mx-4">
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
         <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
