--- a/html/01-기부-종합.html
+++ b/html/01-기부-종합.html
@@ -184,34 +184,39 @@
 
 
     <div class="donate-process lg:flex justify-between">
-
       <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
         <dt class="text-base lg:text-lg font-bold text-primary lg:mb-4 mb-0">기부 내용 결정</dt>
         <dd>
-          <a class="arrow bg-primary text-white text-xs py-1.5 px-4 block w-full rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">지금 기부하기</a>
+          <a class="arrow bg-primary text-white text-xs py-1.5 px-4 lg:block lg:w-full rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">지금 기부하기</a>
         </dd>
       </dl>
-      <div class="d flex items-center"><em>&gt;</em></div>
+      <div class="d flex items-center justify-center"><em>&gt;</em></div>
 
       <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
         <dt class="text-base lg:text-lg font-bold text-primary lg:mb-2 mb-0">기부 내용 결정</dt>
         <dd class="text-gray600 lg:text-sm text-sm">기부 문의<br>
           (070-5129-5447)</dd>
       </dl>
-      <div class="d flex items-center"><em>&gt;</em></div>
+      <div class="d flex items-center justify-center"><em>&gt;</em></div>
 
       <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
         <dt class="text-base lg:text-lg font-bold text-primary lg:mb-2 mb-0">기부 진행</dt>
         <dd class="text-gray600 lg:text-sm text-sm">사진은 SNS 카드뉴스, 나눔증서, 홈페이지 기부 갤러리에 사용됩니다</dd>
       </dl>
-      <div class="d flex items-center"><em>&gt;</em></div>
+      <div class="d flex items-center justify-center"><em>&gt;</em></div>
 
       <dl class="lg:w-[20.8%] border border-gray400 rounded-lg lg:p-6 p-4 text-center lg:text-left">
         <dt class="text-base lg:text-lg font-bold text-primary lg:mb-2 mb-0">나눔증서 제작 및 리워드 발송</dt>
       </dl>
-
     </div>
 
+    <div>
+      <dl class="mb-6">
+        <dt class="text-lg lg:text-2xl mb-3 font-bold text-primary">고사리손 나눔사업</dt>
+        <dd class="lg:text-base text-sm text-black111">아동·청소년이 나눔의 주인공이 되어 아시아와 아프리카 빈곤국가 아동·청소년에게 미래를 선물합니다. 나눔에 참여한 아동·청소년들은 또래 친구들의 어려움에 공감하고 함께 고민하며 문제 해결을 위해 적극적으로 나서는 민주시민으로 자라게 될 것입니다. 고시리손이 모여 해외 빈곤국가 사회를 변화시킬 수 있도록 관심이 필요합니다.</dd>
+      </dl>
+      <a class="arrow !inline-block bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">자세히보기</a>
+    </div>
 
   </div>
 
