--- a/html/99-영문-레이아웃.html
+++ b/html/99-영문-레이아웃.html
@@ -23,7 +23,7 @@
       <li class="px-10"><a class="hover:text-primary" href="#">Network</a></li>
     </ul>
     <div class="flex items-center">
-      <ul class="menu-eng-lang flex text-xs">
+      <ul class="menu-eng-lang flex text-xs mr-9">
         <li><a class="text-gray500" href="/">KR</a></li>
         <li><a class="font-bold text-black111" href="/121">EN</a></li>
       </ul>
