--- a/html/99-영문-레이아웃.html
+++ b/html/99-영문-레이아웃.html
@@ -12,25 +12,35 @@
   </head>
 <body>
 <div class="container">
-  <div class="header-eng flex items-center justify-between h-24">
-    <a class="" href="/121">
-      <img class="h-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/e75d09243b564.png" alt="한국여성재단">
-    </a>
-    <ul class="menu-eng-main text-lg text-black111 font-bold flex">
-      <li class="active px-10"><a class="hover:text-primary" href="#">About KFW</a></li>
-      <li class="px-10"><a class="hover:text-primary" href="#">Donation</a></li>
-      <li class="px-10"><a class="hover:text-primary" href="#">Grant</a></li>
-      <li class="px-10"><a class="hover:text-primary" href="#">Network</a></li>
-    </ul>
+  <div class="header-eng flex items-center justify-between h-14 lg:h-24">
+    <div class="flex items-center">
+      <a href="#" class="btn-mobile-menu2 lg:hidden mr-5 text-2xl text-primary">
+        <i class="xi-bars"></i>
+        <i class="xi-close"></i>
+      </a>
+      <a href="/121">
+        <img class="h-8 lg:h-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/e75d09243b564.png" alt="한국여성재단">
+      </a>
+    </div>
+    <nav class="lg:static absolute top-14">
+      <ul class="menu-eng-main text-base lg:text-lg text-black111 font-bold lg:flex">
+        <li class="active px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">About KFW</a></li>
+        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">Donation</a></li>
+        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">Grant</a></li>
+        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">Network</a></li>
+      </ul>
+    </nav>
     <div class="flex items-center">
       <ul class="menu-eng-lang flex text-xs mr-9">
         <li><a class="text-gray500" href="/">KR</a></li>
         <li><a class="font-bold text-black111" href="/121">EN</a></li>
       </ul>
-      <a class="fixed_transform inline-blocked " href="#" onclick="SITE_SEARCH.openSearch(search_option_data_w20220714b5bd9746d6134);"><i class="btb bt-search"></i><span class="sr-only">site search</span></a>
+      <a class="fixed_transform inline-blocked " href="#" onclick="SITE_SEARCH.openSearch(search_option_data_w202209211a4775b4f7fb1);"><i class="btb bt-search  text-2xl font-normal"></i><span class="sr-only">site search</span></a>
     </div>
   </div>
 </div>
+
+
 <div class="container">
 
   <div class="pt-8 pb-12 lg:pt-16 lg:pb-24 text-center lg:text-left">
