--- a/html/99-영문-레이아웃.html
+++ b/html/99-영문-레이아웃.html
@@ -22,7 +22,7 @@
         <img class="h-8 lg:h-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/e75d09243b564.png" alt="한국여성재단">
       </a>
     </div>
-    <nav class="lg:static absolute top-14">
+    <nav class="lg:static fixed top-14">
       <ul class="menu-eng-main text-base lg:text-lg text-black111 font-bold lg:flex">
         <li class="active px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">About KFW</a></li>
         <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">Donation</a></li>
@@ -31,11 +31,11 @@
       </ul>
     </nav>
     <div class="flex items-center">
-      <ul class="menu-eng-lang flex text-xs mr-9">
+      <ul class="menu-eng-lang flex text-xs mr-4 lg:mr-9">
         <li><a class="text-gray500" href="/">KR</a></li>
         <li><a class="font-bold text-black111" href="/121">EN</a></li>
       </ul>
-      <a class="fixed_transform inline-blocked " href="#" onclick="SITE_SEARCH.openSearch(search_option_data_w202209211a4775b4f7fb1);"><i class="btb bt-search  text-2xl font-normal"></i><span class="sr-only">site search</span></a>
+      <a class="fixed_transform inline-blocked " href="#" onclick="SITE_SEARCH.openSearch(search_option_data_w202209211a4775b4f7fb1);"><i class="btb bt-search text-lg lg:text-2xl font-normal"></i><span class="sr-only">site search</span></a>
     </div>
   </div>
 </div>
@@ -52,6 +52,48 @@
   </div>
 
   <div class="text-table">
+    <dl class="mb-8 lg:mb-12">
+      <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
+        2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
+    </dl>
+
+    <dl class="mb-8 lg:mb-12">
+      <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
+        2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
+    </dl>
+
+    <dl class="mb-8 lg:mb-12">
+      <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
+        2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
+    </dl>
+
+    <dl class="mb-8 lg:mb-12">
+      <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
+        2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
+    </dl>
+
+    <dl class="mb-8 lg:mb-12">
+      <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
+        2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
+    </dl>
+
+    <dl class="mb-8 lg:mb-12">
+      <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
+        2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
+    </dl>
+
+    <dl class="mb-8 lg:mb-12">
+      <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
+      <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
+        2021년에는 기획공모의 하나로 여성이 안전한 세상 만들기를 통해 여성과 아동폭력 예방 및 해결을 위한 사업을 지원하였습니다.</dd>
+    </dl>
+
     <dl class="mb-8 lg:mb-12">
       <dt class="text-2xl lg:text-[32px] font-bold mb-2 lg:mb-6">성평등사회조성사업</dt>
       <dd class="text-gray500 text-sm lg:text-base">반성매매여성인권운동 기록, 재난과 성평등, 여성인권증진 등 성평등한 사회를 만들고 우리 사회 주요 여성 이슈 및 당면 과제를 해결하기 위한 다양하고 창의적인 여성단체의 사업을 지원합니다.<br>
