--- a/html/99-영문-레이아웃.html
+++ b/html/99-영문-레이아웃.html
@@ -24,10 +24,10 @@
     </div>
     <nav class="lg:static fixed top-14">
       <ul class="menu-eng-main text-base lg:text-lg text-black111 font-bold lg:flex">
-        <li class="active px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">About KFW</a></li>
-        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">Donation</a></li>
-        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">Grant</a></li>
-        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="#">Network</a></li>
+        <li class="active px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="/123">About KFW</a></li>
+        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="/132">Donation</a></li>
+        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="/133">Grant</a></li>
+        <li class="px-2 py-2 lg:px-10 lg:py-0 border-b border-gray300 lg:border-none"><a class="hover:text-primary" href="/134">Network</a></li>
       </ul>
     </nav>
     <div class="flex items-center">
@@ -102,6 +102,29 @@
 
   </div>
 
+  <div class="container relative">
+    <div class="foot-sociallink _sns_link">
+      <div class="btn-group _sns_link_list" role="group">
+        <a type="button" class="btn pull-right _WzB5T2tKfa " href="https://happylog.naver.com/hlog/womenfund" target="_blank"><i class="ii ii-happybean"></i><span class="sr-only">SNS 바로가기</span></a><a type="button" class="btn pull-right _46SW6h7t0o " href="https://www.youtube.com/user/kwomenfund" style="" target="_blank"><i class="ii ii-youtube"></i><span class="sr-only">SNS 바로가기</span></a><a type="button" class="btn pull-right _0d84524mLS " href="https://www.facebook.com/kwomenfund" style="" target="_blank"><i class="ii ii-facebook"></i><span class="sr-only">SNS 바로가기</span></a><a type="button" class="btn pull-right _Ug8EMK23S0 " href="https://www.instagram.com/womenfund/" style="" target="_blank"><i class="fa fa-instagram"></i><span class="sr-only">SNS 바로가기</span></a>							</div>
+    </div>
+    <div class="footer-group"><a class="btn-goto-top" href="#"><span>위로 가기</span></a>
+      <div class="footer-info">
+        <a class="logo" href="/" target="_blank"><img src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/dd0f86632a0ae.png" class="fr-fil fr-dib"></a>
+
+      </div>
+      <div class="site-info">
+        <select id="family_site" name="family_site">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <option value="0">FAMILY SITE</option>
+          <option value="https://www.google.co.kr">사이트1</option>&nbsp;</select>
+
+        <dl class="text-info">
+          <dt>재단법인 한국여성재단</dt>
+          <dd><strong>ADDRESS</strong> : 5F, Korea Foundation for Women Building, 13, Worldcupbuk-ro 5-gil, Mapo-gu, Seoul, <br>Republic of Korea (04001)
+            <br><strong>TEL</strong> : (+82) (0)2-336-6364<em>|</em><strong>E-MAIL</strong> : womenfund@womenfund.or.kr<em>|</em><strong>FAX</strong> : (+82) (0)2-336-6459</dd>
+        </dl>
+      </div>
+      <div class="link-info"><a class="future-forum" href="#"><span>미래포럼</span></a></div></div>
+    </div>
 
 </div>
 
