--- a/html/01-기부-개인기부-주제별사업기부.html
+++ b/html/01-기부-개인기부-주제별사업기부.html
@@ -33,19 +33,21 @@
       <div class="lg:flex">
         <div class="lg:w-[48.3%] flex-shrink-0 lg:mr-8 mb-8 lg:mb-0">
           <img class="!p-0 w-full mb-4" src="https://cdn.imweb.me/thumbnail/20220829/165ab5f5283ee.png" alt="">
-          <div class="text-center font-bold text-base">기부금은 이렇게 쓰여요</div>
         </div>
-        <ul class="border-t-2 border-gray700 text-sm lg:text-base">
-          <li class="py-4 px-4 border-b border-gray400">
-            <strong class="mb-2 block">성폭력 및 가정폭력 예방과 피해자 지원</strong>
-            <p class="mb-4 text-gray600">매년 공모를 통해 폭력을 주제로 한 여성단체 사업을 선정하여 지원</p>
-            <a class="arrow !inline-block bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">자세히보기</a>
-          </li>
-          <li class="py-4 px-4 border-b border-gray400">
-            <strong class="mb-4 block">약자에 대한 폭력이 없는 안전한 사회를 만드는 노력에 함께 해주세요 </strong>
-            <a class="arrow !inline-block bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">지금 기부하기</a>
-          </li>
-        </ul>
+        <div>
+          <div class="font-bold text-base mb-4">기부금은 이렇게 쓰여요</div>
+          <ul class="border-t-2 border-gray700 text-sm lg:text-base">
+            <li class="py-4 px-4 border-b border-gray400">
+              <strong class="mb-2 block">성폭력 및 가정폭력 예방과 피해자 지원</strong>
+              <p class="mb-4 text-gray600">매년 공모를 통해 폭력을 주제로 한 여성단체 사업을 선정하여 지원</p>
+              <a class="arrow !inline-block bg-white border border-pink300 text-primary text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">자세히보기</a>
+            </li>
+            <li class="py-4 px-4 border-b border-gray400">
+              <strong class="mb-4 block">약자에 대한 폭력이 없는 안전한 사회를 만드는 노력에 함께 해주세요 </strong>
+              <a class="arrow !inline-block bg-primary text-white text-xs py-1.5 pl-4 pr-3 rounded-3xl font-bold mr-2 mt-2 hover:bg-black hover:text-white hover:border-black" href="#">지금 기부하기</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="border-b border-gray400 pb-12 mb-12 lg:pb-16 lg:mb-16">
