--- a/html/01-기부-종합.html
+++ b/html/01-기부-종합.html
@@ -24,6 +24,66 @@
 
   <div class="max-w-[768px] text-table">
 
+    <ul class="flex flex-wrap text-sm lg:text-base text-gray700 border-t-2 border-t-gray700 border-b border-b-gray300">
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/4edc5645db295.png" alt="">
+        <strong class="block">기본 예우</strong>
+        <span class="block mt-2 text-gray600">소식지, 웹 뉴스레터</span>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/df969e1b123fd.png" alt="">
+        <strong class="block">리워드 대상</strong>
+        <span class="block mt-2 text-gray600">10만원 이상 기부자</span>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/c31581e07241e.png" alt="">
+        <strong class="block">기념일별 포토 토퍼</strong>
+        <span class="block mt-2 text-gray600">기념일별 포토 토퍼</span>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/1e9154def34a3.png" alt="">
+        <strong class="block">평등선언문</strong>
+        <span class="block mt-2 text-gray600">※ 평등가족 기부자에 한해 평등선언문 파일 제공</span>
+      </li>
+    </ul>
+
+    <ul class="flex flex-wrap text-sm lg:text-base text-gray700 border-t-2 border-t-gray700 border-b border-b-gray300">
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/4edc5645db295.png" alt="">
+        <strong class="block">기본 예우</strong>
+        <span class="block mt-8 text-gray600">정기 간행물(소식지, 연차보고서), 웹 뉴스레터</span>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/016e9045f1a04.png" alt="">
+        <strong class="block">회원 위촉식 및 기부금 전달식, 감사패 수여</strong>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/8696007812b30.png" alt="">
+        <strong class="block">명예의 전당 등재</strong>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/44943fec4ef73.png" alt="">
+        <strong class="block">1:1 기부 컨설팅</strong>
+      </li>
+
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/fddc14355df89.png" alt="">
+        <strong class="block">사업 개별 보고</strong>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/e304fe37a10af.png" alt="">
+        <strong class="block">행사 및 교육 프로그램 </strong>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/794c647deeeaf.png" alt="">
+        <strong class="block">클럽 네트워킹</strong>
+      </li>
+      <li class="lg:w-1/4 w-1/2 my-4 px-2">
+        <img class="block w-12 lg:w-16 !mt-0 mb-2" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f71c9659af3db.png" alt="">
+        <strong class="block">대외 홍보</strong>
+      </li>
+    </ul>
+
 
     <div class="donate-process lg:flex justify-between items-center">
 
